test/neg/literals.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants
(declare-const foo Str)
(declare-const bar Str)


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((v1 Int)) (=> True (= bar foo))))
